# Financial-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-ci.yml
configs/: bridge.example.json
docs/: GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  architecture.md  bridge_implementation.md
examples/: bridge_example.py
scripts/: run_tests.sh
src/financial_agent/: __init__.py
src/financial_agent/bridge/: README.md  __init__.py  adapter_base.py  adapter_mock.py  adapter_mt5.py  bridge.py  core.py
src/financial_agent/bridge/tests/: __init__.py  test_bridge.py
src/financial_agent/common/: __init__.py
src/financial_agent/fusion/: README.md  __init__.py
src/financial_agent/memory/: __init__.py
src/financial_agent/orchestration/: __init__.py
src/financial_agent/tools/: __init__.py
tests/: conftest.py  test_smoke.py
