[metadata]
name = financial-agent
version = 0.1.0
description = Tool-Augmented Multi-Modal Trading System with INoT Architecture
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/financial-agent
keywords = trading, finance, ai, llm, mt5, metatrader, algorithmic-trading
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    financial-agent = financial_agent.cli:main

[options.extras_require]
dev =
    black>=23.7.0
    flake8>=6.1.0
    mypy>=1.5.0
    isort>=5.12.0
    ipython>=8.14.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.1
monitoring =
    prometheus-client>=0.17.0
    sentry-sdk>=1.28.0
technical-analysis =
    pandas-ta>=0.3.14b

[tool:pytest]
addopts = -q
testpaths = tests

[coverage:run]
source = src/financial_agent
omit =
    */tests/*
    */test_*.py
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == '__main__'
    if TYPE_CHECKING:
    @abstractmethod

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
strict_equality = True

[mypy-MetaTrader5.*]
ignore_missing_imports = True

[mypy-ta.*]
ignore_missing_imports = True

[mypy-pandas_ta.*]
ignore_missing_imports = True
